# cv-reproduce

./: .env.example  ASSIGNMENT.md  README.md  pyproject.toml
data/: results.csv
experiment/: convmixer_models.py  train.py  train_convmixer_cifar10.py
experiment/ablations/: mlp_channel.py  patch_to_conv.py
experiments/: train.py  train_utils.py
experiments/ablations/: README.md  data_size.py  mlp_channel.py  no_channel_mix.py  non_linear_channel_mix.py  patch_to_conv.py
mlp_channel_mixer/: train_mlp.py
report/: main.aux  main.bbl  main.blg  main.fdb_latexmk  main.fls  main.out  main.tex  refs.bib
report/sections/: ablations.tex  abstract.tex  background.tex  conclusion.tex  introduction.tex  results.tex  setup.tex
