[project]
name = "cv-reproduce"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["python-dotenv>=1.2.2", "timm>=1.0.26", "wandb>=0.25.1"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["ALL"]

[tool.pytest.ini_options]
pythonpath = ["."]

[dependency-groups]
dev = ["pytest>=8.4.2", "ruff>=0.13.0"]
